<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAddressActivity">

    <EditText
        android:id="@+id/AddressLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:ems="10"
        android:textIsSelectable="true"
        android:hint="Latitude with Direction"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddressLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:textIsSelectable="true"
        android:ems="10"
        android:hint="Longitude with Direction"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/AddressLat"
        app:layout_constraintTop_toBottomOf="@+id/AddressLat" />

    <Button
        android:id="@+id/SaveAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="262dp"
        android:onClick="onSaveAClicked"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ExitToLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="onExitAClicked"
        android:text="Exit"
        app:layout_constraintStart_toStartOf="@+id/SaveAddress"
        app:layout_constraintTop_toBottomOf="@+id/SaveAddress" />

    <Button
        android:id="@+id/ExitToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="78dp"
        android:onClick="onBackHomeClicked"
        android:text="Exit to Compass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>